Fixed overlap issue with transparent video

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -65,6 +65,7 @@ body {
 
 .transparent {
   opacity: 0;
+  z-index: -1000;
 }
 
 .btn {
